ng add @angular-architects/module-federation --project mfe1 --type remote --port 4201

--- a/angular.json
+++ b/angular.json
@@ -115,7 +115,7 @@
 			"prefix": "app",
 			"architect": {
 				"build": {
-					"builder": "@angular-devkit/build-angular:browser",
+					"builder": "ngx-build-plus:browser",
 					"options": {
 						"outputPath": "dist/mfe1",
 						"index": "projects/mfe1/src/index.html",
@@ -129,7 +129,9 @@
 						"styles": [
 							"projects/mfe1/src/styles.css"
 						],
-						"scripts": []
+						"scripts": [],
+						"extraWebpackConfig": "projects/mfe1/webpack.config.js",
+						"commonChunk": false
 					},
 					"configurations": {
 						"production": {
@@ -151,7 +153,8 @@
 									"with": "projects/mfe1/src/environments/environment.prod.ts"
 								}
 							],
-							"outputHashing": "all"
+							"outputHashing": "all",
+							"extraWebpackConfig": "projects/mfe1/webpack.prod.config.js"
 						},
 						"development": {
 							"buildOptimizer": false,
@@ -165,21 +168,28 @@
 					"defaultConfiguration": "production"
 				},
 				"serve": {
-					"builder": "@angular-devkit/build-angular:dev-server",
+					"builder": "ngx-build-plus:dev-server",
 					"configurations": {
 						"production": {
-							"browserTarget": "mfe1:build:production"
+							"browserTarget": "mfe1:build:production",
+							"extraWebpackConfig": "projects/mfe1/webpack.prod.config.js"
 						},
 						"development": {
 							"browserTarget": "mfe1:build:development"
 						}
 					},
-					"defaultConfiguration": "development"
+					"defaultConfiguration": "development",
+					"options": {
+						"port": 4201,
+						"publicHost": "http://localhost:4201",
+						"extraWebpackConfig": "projects/mfe1/webpack.config.js"
+					}
 				},
 				"extract-i18n": {
-					"builder": "@angular-devkit/build-angular:extract-i18n",
+					"builder": "ngx-build-plus:extract-i18n",
 					"options": {
-						"browserTarget": "mfe1:build"
+						"browserTarget": "mfe1:build",
+						"extraWebpackConfig": "projects/mfe1/webpack.config.js"
 					}
 				},
 				"test": {
