@schematics/angular:application > "strict": true

--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,11 @@
 	"projects": {
 		"shell": {
 			"projectType": "application",
-			"schematics": {},
+			"schematics": {
+				"@schematics/angular:application": {
+					"strict": true
+				}
+			},
 			"root": "projects/shell",
 			"sourceRoot": "projects/shell/src",
 			"prefix": "app",
@@ -109,7 +113,11 @@
 		},
 		"mfe1": {
 			"projectType": "application",
-			"schematics": {},
+			"schematics": {
+				"@schematics/angular:application": {
+					"strict": true
+				}
+			},
 			"root": "projects/mfe1",
 			"sourceRoot": "projects/mfe1/src",
 			"prefix": "app",
