--- a/angular.json
+++ b/angular.json
@@ -218,100 +218,110 @@
 					}
 				}
 			}
-    },
-    "mfe2": {
-      "projectType": "application",
-      "schematics": {},
-      "root": "projects/mfe2",
-      "sourceRoot": "projects/mfe2/src",
-      "prefix": "app",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:browser",
-          "options": {
-            "outputPath": "dist/mfe2",
-            "index": "projects/mfe2/src/index.html",
-            "main": "projects/mfe2/src/main.ts",
-            "polyfills": "projects/mfe2/src/polyfills.ts",
-            "tsConfig": "projects/mfe2/tsconfig.app.json",
-            "assets": [
-              "projects/mfe2/src/favicon.ico",
-              "projects/mfe2/src/assets"
-            ],
-            "styles": [
-              "projects/mfe2/src/styles.css"
-            ],
-            "scripts": []
-          },
-          "configurations": {
-            "production": {
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
-                }
-              ],
-              "fileReplacements": [
-                {
-                  "replace": "projects/mfe2/src/environments/environment.ts",
-                  "with": "projects/mfe2/src/environments/environment.prod.ts"
-                }
-              ],
-              "outputHashing": "all"
-            },
-            "development": {
-              "buildOptimizer": false,
-              "optimization": false,
-              "vendorChunk": true,
-              "extractLicenses": false,
-              "sourceMap": true,
-              "namedChunks": true
-            }
-          },
-          "defaultConfiguration": "production"
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "configurations": {
-            "production": {
-              "browserTarget": "mfe2:build:production"
-            },
-            "development": {
-              "browserTarget": "mfe2:build:development"
-            }
-          },
-          "defaultConfiguration": "development"
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "mfe2:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/mfe2/src/test.ts",
-            "polyfills": "projects/mfe2/src/polyfills.ts",
-            "tsConfig": "projects/mfe2/tsconfig.spec.json",
-            "karmaConfig": "projects/mfe2/karma.conf.js",
-            "assets": [
-              "projects/mfe2/src/favicon.ico",
-              "projects/mfe2/src/assets"
-            ],
-            "styles": [
-              "projects/mfe2/src/styles.css"
-            ],
-            "scripts": []
-          }
-        }
-      }
-    }
+		},
+		"mfe2": {
+			"projectType": "application",
+			"schematics": {},
+			"root": "projects/mfe2",
+			"sourceRoot": "projects/mfe2/src",
+			"prefix": "app",
+			"architect": {
+				"build": {
+					"builder": "ngx-build-plus:browser",
+					"options": {
+						"outputPath": "dist/mfe2",
+						"index": "projects/mfe2/src/index.html",
+						"main": "projects/mfe2/src/main.ts",
+						"polyfills": "projects/mfe2/src/polyfills.ts",
+						"tsConfig": "projects/mfe2/tsconfig.app.json",
+						"assets": [
+							"projects/mfe2/src/favicon.ico",
+							"projects/mfe2/src/assets"
+						],
+						"styles": [
+							"projects/mfe2/src/styles.css"
+						],
+						"scripts": [],
+						"extraWebpackConfig": "projects/mfe2/webpack.config.js",
+						"commonChunk": false
+					},
+					"configurations": {
+						"production": {
+							"budgets": [
+								{
+									"type": "initial",
+									"maximumWarning": "500kb",
+									"maximumError": "1mb"
+								},
+								{
+									"type": "anyComponentStyle",
+									"maximumWarning": "2kb",
+									"maximumError": "4kb"
+								}
+							],
+							"fileReplacements": [
+								{
+									"replace": "projects/mfe2/src/environments/environment.ts",
+									"with": "projects/mfe2/src/environments/environment.prod.ts"
+								}
+							],
+							"outputHashing": "all",
+							"extraWebpackConfig": "projects/mfe2/webpack.prod.config.js"
+						},
+						"development": {
+							"buildOptimizer": false,
+							"optimization": false,
+							"vendorChunk": true,
+							"extractLicenses": false,
+							"sourceMap": true,
+							"namedChunks": true
+						}
+					},
+					"defaultConfiguration": "production"
+				},
+				"serve": {
+					"builder": "ngx-build-plus:dev-server",
+					"configurations": {
+						"production": {
+							"browserTarget": "mfe2:build:production",
+							"extraWebpackConfig": "projects/mfe2/webpack.prod.config.js"
+						},
+						"development": {
+							"browserTarget": "mfe2:build:development"
+						}
+					},
+					"defaultConfiguration": "development",
+					"options": {
+						"port": 4202,
+						"publicHost": "http://localhost:4202",
+						"extraWebpackConfig": "projects/mfe2/webpack.config.js"
+					}
+				},
+				"extract-i18n": {
+					"builder": "ngx-build-plus:extract-i18n",
+					"options": {
+						"browserTarget": "mfe2:build",
+						"extraWebpackConfig": "projects/mfe2/webpack.config.js"
+					}
+				},
+				"test": {
+					"builder": "@angular-devkit/build-angular:karma",
+					"options": {
+						"main": "projects/mfe2/src/test.ts",
+						"polyfills": "projects/mfe2/src/polyfills.ts",
+						"tsConfig": "projects/mfe2/tsconfig.spec.json",
+						"karmaConfig": "projects/mfe2/karma.conf.js",
+						"assets": [
+							"projects/mfe2/src/favicon.ico",
+							"projects/mfe2/src/assets"
+						],
+						"styles": [
+							"projects/mfe2/src/styles.css"
+						],
+						"scripts": []
+					}
+				}
+			}
+		}
 	}
 }
